--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "tauri-dev": "tauri dev",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "tauri-build": "tauri build"
   },
   "dependencies": {
     "@tauri-apps/api": "^1",
