--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,9 +16,9 @@ tauri-build = { version = "1.5.3", features = [] }
 
 [dependencies]
 serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.7.0", features = [ "path-all", "fs-all", "os-all"] }
 ssh2 = "0.9.4"
+serde = "1.0.204"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
