--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,6 +19,7 @@ serde_json = "1.0"
 tauri = { version = "1.7.0", features = [ "path-all", "fs-all", "os-all"] }
 ssh2 = "0.9.4"
 serde = "1.0.204"
+chrono = "0.4.38"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
