--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
     "tailwindcss": "^3.4.7"
   },
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
     "@tauri-apps/cli": "^1.6.0",
     "@types/react": "^18.3.3",
+    "eslint": "^9.8.0",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.8.0",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^7.17.0",
     "vite": "^5.3.3"
   }
 }
