--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "module": "ESNext",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
-
+    "paths": {
+      "@my-types/*":["./lib/types.ts"]
+    },
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -20,5 +22,6 @@
     "noFallthroughCasesInSwitch": true,
     "jsx": "react-jsx"
   },
+
   "include": ["src"]
 }
