Consolidated profile Queries & backend functions. Frontend design follows a Less is more approach and content flow is reactive.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "skipLibCheck": true,
     "paths": {
       "@my-types/*":["./lib/types.ts"]
+//      "@components/*":["./components/*"]
     },
     /* Bundler mode */
     "moduleResolution": "bundler",
