--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
+    "react-router-dom": "^6.26.1",
     "tailwindcss": "^3.4.7"
   },
   "devDependencies": {
@@ -29,7 +30,7 @@
     "eslint-plugin-react": "^7.35.0",
     "globals": "^15.8.0",
     "typescript": "^5.2.2",
-    "typescript-eslint": "^7.17.0",
+    "typescript-eslint": "^8.1.0",
     "vite": "^5.3.3"
   }
 }
