--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "globals": "^15.8.0",
     "typescript": "^5.2.2",
     "typescript-eslint": "^8.1.0",
-    "vite": "^5.3.3"
+    "vite": "^5.3.3",
+    "@vitejs/plugin-react": "^4.2.1"
   }
 }
