--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,7 +16,7 @@ tauri-build = { version = "1.5.3", features = [] }
 
 [dependencies]
 serde_json = "1.0"
-tauri = { version = "1.7.0", features = [ "dialog-open", "path-all", "fs-all", "os-all"] }
+tauri = { version = "1.7.0", features = [ "updater", "dialog-open", "path-all", "fs-all", "os-all"] }
 ssh2 = "0.9.4"
 serde = "1.0.204"
 chrono = { version= "0.4.38", features = ["serde"] }
