--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   push:
     # This workflow will trigger on each push to the `release` branch to create or update a GitHub release, build your app, and upload the artifacts to the release.
     branches:
-      - release
+      - development
     # Uncommenting this will trigger workflow when pushed with a version tag such as "app-v1.0.0"
     # https://tauri.app/v1/guides/building/cross-platform/#how-to-trigger
 #    tags:
@@ -18,14 +18,14 @@ jobs:
       fail-fast: false
       matrix:
         include:
-         - platform: 'macos-latest' # for Arm based macs (M1 and above).
-           args: '--target aarch64-apple-darwin'
+#         - platform: 'macos-latest' # for Arm based macs (M1 and above).
+#           args: '--target aarch64-apple-darwin'
          - platform: 'macos-latest' # for Intel based macs.
            args: '--target x86_64-apple-darwin'
-         - platform: 'ubuntu-22.04' # for Tauri v1 you could replace this with ubuntu-20.04.
-           args: ''
-         - platform: 'windows-latest'
-           args: ''
+#         - platform: 'ubuntu-22.04' # for Tauri v1 you could replace this with ubuntu-20.04.
+#           args: ''
+#         - platform: 'windows-latest'
+#           args: ''
 
     runs-on: ${{ matrix.platform }}
     steps:
@@ -48,6 +48,12 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.0-dev libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
+        # webkitgtk 4.0 is for Tauri v1 - webkitgtk 4.1 is for Tauri v2.
+        # You can remove the one that doesn't apply to your app to speed up the workflow a bit.
+      - name: install dependencies (intel macos only)
+        if: matrix.platform == 'macos-latest' && 'x86_64-apple-darwin' # This must match the platform value defined above.
+        run: |
+          brew install openssl
         # webkitgtk 4.0 is for Tauri v1 - webkitgtk 4.1 is for Tauri v2.
         # You can remove the one that doesn't apply to your app to speed up the workflow a bit.
 
