Attempting to fix build issue on MacOS Intel x86_64

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,12 +53,10 @@ jobs:
       - name: install dependencies (intel macos only)
         if: matrix.platform == 'macos-latest' && 'x86_64-apple-darwin' # This must match the platform value defined above.
         run: |
-          export OPENSSL_DIR="/opt/homebrew/opt/openssl@3"
-          export OPENSSL_LIB_DIR="/opt/homebrew/opt/openssl@3/lib"
-          export OPENSSL_INCLUDE_DIR="/opt/homebrew/opt/openssl@3/include"
-          export PKG_CONFIG_PATH="/opt/homebrew/opt/openssl@3/lib/pkgconfig"
-          pkg-config --libs openssl
-          source ~/.zshrc
+          export OPENSSL_DIR="/opt/homebrew/opt/openssl@3/3.3.2"
+          export OPENSSL_LIB_DIR="/opt/homebrew/opt/openssl@3/3.3.2/lib"
+          export OPENSSL_INCLUDE_DIR="/opt/homebrew/opt/openssl@3/3.3.2/include"
+          export PKG_CONFIG_PATH="/opt/homebrew/opt/openssl@3/3.3.2/lib/pkgconfig"
         # webkitgtk 4.0 is for Tauri v1 - webkitgtk 4.1 is for Tauri v2.
         # You can remove the one that doesn't apply to your app to speed up the workflow a bit.
 
