--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,6 +61,7 @@ jobs:
           export PKG_CONFIG_SYSROOT_DIR="/opt/homebrew/opt/openssl@3/3.3.2"
           pkg-config --libs openssl
           pkg-config --cflags openssl
+          which pkg-config
         # webkitgtk 4.0 is for Tauri v1 - webkitgtk 4.1 is for Tauri v2.
         # You can remove the one that doesn't apply to your app to speed up the workflow a bit.
 
